<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TODO - ESGI</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_new_task">NewTaskActivity</string>

    <!-- activity_new_task.xml -->
    <string name="new_task_date">Date</string>
    <string name="new_task_priority">Priority</string>
    <string name="new_task_category">Category</string>
    <string name="new_task_title">Title / Resume</string>
    <string name="new_task_content">Content</string>
    <string name="new_task_validate">Validate</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- activity_date.xml -->
    <string name="set_date">Date</string>
    <string name="set_hour">Hour</string>
    <string name="set_recall_date">Recall Date</string>
    <string name="set_recall_hour">Recall Hour</string>
    <string name="title_activity_initial_date_picker">InitialDatePickerActivity</string>
    <string name="validate_date">Validate</string>

    <!-- activity_category.xml -->
    <string name="title_activity_category">Category</string>
    <string name="title_category">What category?</string>

    <!-- activity_priority.xml -->
    <string name="title_activity_priority">Priority</string>
    <string name="title_priority">Which priority?</string>
    
    <!-- activity_current_task -->
    <string name="title_activity_current_task">CurrentTaskActivity</string>
    <string name="back_to_main">Back to Home</string>
    <string name="update_current_task">Update</string>
    <string name="delete_current_task">Delete</string>

</resources>
