<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CurrentTaskActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateDate"
            android:text="@string/new_task_date" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updatePriority"
            android:text="@string/new_task_priority" />
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="updateCategory"
        android:text="@string/new_task_category" />

    <EditText
        android:id="@+id/editTextTitleTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/new_task_title" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextContentTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:ems="10"
        android:hint="@string/new_task_content"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/back_to_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_to_main" 
            android:onClick="backToMainActivity" />

        <Button
            android:id="@+id/update_current_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/update_current_task" 
            android:onClick="updateCurrentTask" />

        <Button
            android:id="@+id/delete_current_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_current_task" 
            android:onClick="deleteCurrentTask" />
    </LinearLayout>

</LinearLayout>