<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DateActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_date" />

    <EditText
        android:id="@+id/editTextInitialDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:onClick="openDatePickerDialog" >

        <requestFocus />
    </EditText>
    
        <TextView
        android:id="@+id/initialHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_hour" />

    <EditText
        android:id="@+id/editTextInitialHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:onClick="openDatePickerDialogHour" >

        <requestFocus />
    </EditText>
    
    <View 
   android:layout_width="fill_parent"
   android:layout_height="1dp"
   android:layout_marginTop="20dp"
   android:layout_marginBottom="20dp"  
   android:background="#000"/>

    <TextView
        android:id="@+id/recallDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_recall_date" />

    <EditText
        android:id="@+id/editTextRecallDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:onClick="openDatePickerDialogRecall" >

        <requestFocus />
    </EditText>
    
        <TextView
        android:id="@+id/recallHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_recall_hour" />

    <EditText
        android:id="@+id/editTextRecallHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:onClick="openDatePickerDialogRecallHour" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/validate_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validateDate"
        android:text="@string/validate_date" />
    
</LinearLayout>